update intro and publications

--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
                     <div id="profile-wraper"></div>
                 </div>
                 <div class="col-md-9 about-content">
-                    <h3>I’m Eric Wang, a Ph.D. student in Information Science at Cornell University advised by <a href="https://communication.cals.cornell.edu/people/andrea-won" target="_blank">Prof. Andrea Stevenson Won</a>. Previously, I was a research intern at Stanford University, primarily working with <a href="https://profiles.stanford.edu/james-landay/" target="_blank">Prof. James Landay</a>. I have B.S and M.S. in Computer Science from National Taiwan University advised by <a href="http://mikechen.com/" target="_blank">Prof. Mike Y. Chen</a> and <a href="http://graphics.im.ntu.edu.tw/~robin/" target="_blank">Prof. Bing-Yu Chen</a>.</h3>
+                    <h3>I’m Eric Wang, a Ph.D. candidate in Information Science at Cornell University advised by <a href="https://communication.cals.cornell.edu/people/andrea-won" target="_blank">Prof. Andrea Stevenson Won</a>. Previously, I was a research intern at <span class="bold">Autodesk</span>, <span class="bold">Microsoft Research</span>, and <span class="bold">Facebook Reality Lab</span>. I have B.S and M.S. in Computer Science from National Taiwan University advised by <a href="http://mikechen.com/" target="_blank">Prof. Mike Y. Chen</a> and <a href="http://graphics.im.ntu.edu.tw/~robin/" target="_blank">Prof. Bing-Yu Chen</a>.</h3>
 
-                    <h3>My research interests lie at the intersection of <span class="span-focus">Human-Computer Interaction (HCI)</span>, <span class="span-focus">Computer-Supported Cooperative Work (CSCW) </span>, and <span class="span-focus">Virtual/Mixed Reality (VR/MR)</span> My PhD research topic is <span class="bold">enabling VR socially relived experience</span> which allows people to ‘enter’ into a past experience, move around and relive a experience from different perspectives in VR socially and exploring <span class="bold">how such new VR relived experiences transform the way people share experiences</span>.</h3>
+                    <h3>My research interests lie at the intersection of <span class="span-focus">Human-Computer Interaction (HCI)</span>, <span class="span-focus">Computer-Supported Cooperative Work (CSCW) </span>, and <span class="span-focus">Virtual/Mixed Reality (VR/MR)</span> In my Ph.D. research, I implemented and utilized the unique capabilities of 3D reconstruction techniques in different research areas such as <span class="bold">VR socially relived experiences</span>, <span class="bold">animating avatars in VR</span>, and <span class="bold"> adaptive AR/MR user interface</span>, as well as identifying its privacy concerns and challenges.</h3>
 
-                    <h3>More specifically, I’m interested in (1) utilizing deep learning, computer vision and VR to enable reconstructing past experience in 3D and sharing experiences through socially reliving experiences in VR; (2)  investigating how people identify with their reconstructed avatars and privacy concerns when sharing VR relived experience, and(3) designing novel mechanisms allowing people to customize their reconstructed experiences for self-presentation while preserving the privacy. </h3>
+                    <h3>More specifically, my PhD research focuses on (1) designing ReliveReality, a new experience-sharing method that allows people to reconstruct their experiences in 3D and share them with others in social virtual environments. (2) leveraging the ReliveReality prototype to conduct studies to understand people’s sharing preferences and privacy concerns for sharing reconstructed experiences. (3) Implementing VideoPoseVR, a system that allows users to create animated characters in VR using 3D human motions that are extracted directly from online videos. (4) Designing social-aware AR/MR interfaces through reconstructing social context cues and transforming avatar movements.</h3>
     
                 </div>                
             </div>
@@ -706,6 +706,16 @@
             <div class="row">
                 <div class="col-lg-5 text-center col-left-style">
                     <h1>publications</h1>
+                    <div class="list-wrap text-left">
+                        <h2>Shared Realities: Avatar Identification and Privacy Concerns in Reconstructed Experiences</h2>
+                        <h3>CSCW 2021, Full Paper</h3>
+                         <h4><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span>, Sandhya Sriram, and Andrea Stevenson Won</h4>              
+                    </div>
+                    <div class="list-wrap text-left">
+                        <h2>Shared Realities: Avatar Identification and Privacy Concerns in Reconstructed Experiences</h2>
+                        <h3>CSCW 2021, Full Paper</h3>
+                         <h4><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span>*, Angel Hsing-Chi Hwang*, Yao-Yuan Yang and Andrea Stevenson Won</h4>              
+                    </div>
                     <div class="list-wrap text-left">
                         <h2>Again, Together: Socially Reliving Virtual Reality Experiences When Separated</h2>
                         <h3>CHI 2020, Full Paper</h3>
