fix typo and update cv link

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="col-md-9 about-content">
                     <h3>I’m Eric Wang, a Ph.D. candidate in Information Science at Cornell University advised by <a href="https://communication.cals.cornell.edu/people/andrea-won" target="_blank">Prof. Andrea Stevenson Won</a>. Previously, I was a research intern at <span class="bold">Autodesk</span>, <span class="bold">Microsoft Research</span>, and <span class="bold">Facebook Reality Lab</span>. I have B.S and M.S. in Computer Science from National Taiwan University advised by <a href="http://mikechen.com/" target="_blank">Prof. Mike Y. Chen</a> and <a href="http://graphics.im.ntu.edu.tw/~robin/" target="_blank">Prof. Bing-Yu Chen</a>.</h3>
 
-                    <h3>My research interests lie at the intersection of <span class="span-focus">Human-Computer Interaction (HCI)</span>, <span class="span-focus">Computer-Supported Cooperative Work (CSCW) </span>, and <span class="span-focus">Virtual/Mixed Reality (VR/MR)</span> In my Ph.D. research, I implemented and utilized the unique capabilities of 3D reconstruction techniques in different research areas such as <span class="bold">VR socially relived experiences</span>, <span class="bold">animating avatars in VR</span>, and <span class="bold"> adaptive AR/MR user interface</span>, as well as identifying its privacy concerns and challenges.</h3>
+                    <h3>My research interests lie at the intersection of <span class="span-focus">Human-Computer Interaction (HCI)</span>, <span class="span-focus">Computer-Supported Cooperative Work (CSCW) </span>, and <span class="span-focus">Virtual/Mixed Reality (VR/MR)</span> In my Ph.D. research, I implemented and utilized the unique capabilities of 3D reconstruction techniques in different research areas such as <span class="bold">VR socially relived experiences</span>, <span class="bold">animating avatars in VR</span>, and <span class="bold"> adaptive AR/MR user interface</span>, as well as identifying its <span class="bold">privacy</span> concerns and challenges.</h3>
 
                     <h3>More specifically, my PhD research focuses on (1) designing ReliveReality, a new experience-sharing method that allows people to reconstruct their experiences in 3D and share them with others in social virtual environments. (2) leveraging the ReliveReality prototype to conduct studies to understand people’s sharing preferences and privacy concerns for sharing reconstructed experiences. (3) Implementing VideoPoseVR, a system that allows users to create animated characters in VR using 3D human motions that are extracted directly from online videos. (4) Designing social-aware AR/MR interfaces through reconstructing social context cues and transforming avatar movements.</h3>
     
@@ -154,7 +154,7 @@
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Summer 2021</h5></li>
                     </ul>
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Research Internship,</span>work with Dr. Fraser Anderson and Dr. Qian Zhou, Autodesk HCI&VIS groop</h3></li>
+                        <li class="list-left"><h3><span class="bold">Research Internship,</span>work with Dr. Fraser Anderson and Dr. Qian Zhou, Autodesk HCI&VIS group</h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Winter 2021</h5></li>
                     </ul>
                     <ul>
@@ -206,7 +206,7 @@
                     </ul> 
                 </div>
             </div>
-            <p class="btn-download text-center"><a href="https://drive.google.com/open?id=1FbAw15vjUw3MStqGBT2c85AJeXKQa3iK" class="link" target="_blank"><i class="fa fa-download"></i>download cv</a></p>
+            <p class="btn-download text-center"><a href="https://drive.google.com/file/d/1ItbDBxLlFMfe-5BqP6ZKQPTjb4R1mLFd/view?usp=sharing" class="link" target="_blank"><i class="fa fa-download"></i>download cv</a></p>
         </div>
     </section>
 
