update my skills

--- a/index.html
+++ b/index.html
@@ -673,27 +673,27 @@
             <h1>my skills</h1>
             <div class="row">
                 <div class="col-md-4 skill-text">
-                    <h2>Computer Science</h2>
+                    <h2>Computer Science & Computer Vision</h2>
                     <ul>
-                        <li>C#, Python, C/C++, JAVA, Javascript</li>
-                        <li>Deep learning techniques in Computer Vision</li>
+                        <li>C#, Python, C++, Javascript</li>
+                        <li>Experienced with deep learning frameworks</li>
                         <li>Human Digitalization, 3D human pose estimation, 3D reconstruction</li>
                     </ul>
                 </div>
                 <div class="col-md-4 skill-text">
-                    <h2>Virtual Reality</h2>
+                    <h2>VR/MR</h2>
                     <ul>
-                        <li>Expertise in Unity3D and VR projects development</li>
-                        <li>Solid experiences in VR projects development</li>
+                        <li>Expertise in Unity/Unreal and VR/MR prototypes development</li>
+                        <li>Experienced in developing multi-user VR/AR experiences</li>
                         <li>3D Avatar creation, rigging, animation</li>
                     </ul>
                 </div>
                 <div class="col-md-4 skill-text">
-                    <h2>Research Design</h2>
+                    <h2>Information Science & HCI</h2>
                     <ul>
-                        <li>Mixed-method research design</li>
-                        <li>Quantitative analysis using R</li>
-                        <li>Questionnaire design and qualitative analysis</li>
+                        <li>Experienced with Mixed-method research design</li>
+                        <li>Tackle problems from both a social and technical perspective</li>
+                        <li>Knowledge of quantitative, behavioral analysis and statistical concepts</li>
                     </ul>
                 </div>
             </div>
@@ -825,7 +825,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <h3>Last Update: Nov. 2019</h3>
+                    <h3>Last Update: May. 2022</h3>
                 </div>
             </div>
         </div>
