update skills and cv

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     </ul> 
                 </div>
             </div>
-            <p class="btn-download text-center"><a href="https://drive.google.com/file/d/1ItbDBxLlFMfe-5BqP6ZKQPTjb4R1mLFd/view?usp=sharing" class="link" target="_blank"><i class="fa fa-download"></i>download cv</a></p>
+            <p class="btn-download text-center"><a href="https://drive.google.com/file/d/11OPpU_pgfPsPMcskvu0aLfT8UV5whXOB/view?usp=sharing" class="link" target="_blank"><i class="fa fa-download"></i>download cv</a></p>
         </div>
     </section>
 
@@ -673,25 +673,25 @@
             <h1>my skills</h1>
             <div class="row">
                 <div class="col-md-4 skill-text">
-                    <h2>Computer Science & Computer Vision</h2>
+                    <h2>Machine Learning & Computer Vision</h2>
                     <ul>
                         <li>C#, Python, C++, Javascript</li>
-                        <li>Experienced with deep learning frameworks</li>
-                        <li>Human Digitalization, 3D human pose estimation, 3D reconstruction</li>
+                        <li>Experienced with deep learning frameworks and ML algorithms</li>
+                        <li>Human digitalization, 3D human pose estimation, 3D reconstruction</li>
                     </ul>
                 </div>
                 <div class="col-md-4 skill-text">
-                    <h2>VR/MR</h2>
+                    <h2>Virtual Reality & Mixed Reality</h2>
                     <ul>
                         <li>Expertise in Unity/Unreal and VR/MR prototypes development</li>
                         <li>Experienced in developing multi-user VR/AR experiences</li>
-                        <li>3D Avatar creation, rigging, animation</li>
+                        <li>3D avatar creation, rigging and animation</li>
                     </ul>
                 </div>
                 <div class="col-md-4 skill-text">
-                    <h2>Information Science & HCI</h2>
+                    <h2>HCI & Data Analysis</h2>
                     <ul>
-                        <li>Experienced with Mixed-method research design</li>
+                        <li>Solid experiences in human-centered design</li>
                         <li>Tackle problems from both a social and technical perspective</li>
                         <li>Knowledge of quantitative, behavioral analysis and statistical concepts</li>
                     </ul>
