update skill images

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="text-wraper">
                     <div class="intro-heading">Eric Wang<p style="font-size:0.5em;">(Cheng-Yao Wang)</p></div>
                     <div class="intro-lead-in">
-                        <p>I’m Eric Wang, a Ph.D. student in Information Science at Cornell University interested in <span class="about-focus">Human-Computer Interaction</span>, <span class="about-focus">Computer-Supported Cooperative Work</span> and <span class="about-focus">Virtual/Mixed Reality.</span></p>
+                        <p>I’m Eric Wang, a Ph.D. candidate in Information Science at Cornell University interested in <span class="about-focus">Human-Computer Interaction</span>, <span class="about-focus">Computer-Supported Cooperative Work</span> and <span class="about-focus">Virtual/Mixed Reality.</span></p>
                     </div>
                     <ul class="icon-list">
                         <li><a href="mailto:ericwang0701@gmail.com"><i class="fa fa-envelope-square fa-3x"></i></a></li>
@@ -214,22 +214,23 @@
         <div class="my-skill">            
             <ul>
                 <li>
-                    <h2>Computer Vision</h2>
-                    <p class="skill-img"><img class="lazy" data-original="img/skill1_2.png"></p>
+                    <h2>Computer Vision & Machine Learning</h2>
+                    <p class="skill-img"><img class="lazy" data-original="img/CV_ML.png"></p>
                 </li>
                 <i class="fa fa-plus"></i>
                 <li>
-                    <h2>Virtual Reailty</h2>
-                    <p class="skill-img"><img class="lazy" data-original="img/skill2_2.png"></p>
+                    <h2>Virtual Reailty & Mixed Reality</h2>
+                    <p class="skill-img"><img class="lazy" data-original="img/VR_MR.png"></p>
                 </li>
                 <i class="fa fa-plus"></i>
                 <li>
-                    <h2>Mixed method Research</h2>
-                    <p class="skill-img"><img class="lazy" data-original="img/skill3.png"></p>
+                    <h2>HCI & Data Analysis</h2>
+                    <p class="skill-img"><img class="lazy" data-original="img/HCI.png"></p>
                 </li>
             </ul>            
             <!-- <div class="h-wraper"><h3>Novel Technologies Published in Top Conference and 1st Prize of Competitions</h3></div> -->
-            <div class="h-wraper"><h3>Transforming how people share knowledge and experiences</h3></div>
+            <!-- Computer Science, Social Science, HCI -->
+            <div class="h-wraper"><h3>Utilizing interdisciplinary skills to tackle complex problems from both social and technical perspectives</h3></div>
         </div>
     </section>
 
