--- a/index.html
+++ b/index.html
@@ -215,17 +215,17 @@
             <ul>
                 <li>
                     <h2>Computer Vision & Machine Learning</h2>
-                    <p class="skill-img"><img class="lazy" data-original="img/CV_ML.png"></p>
+                    <p class="skill-img"><img class="lazy" data-original="img/projects/CV_ML.png"></p>
                 </li>
                 <i class="fa fa-plus"></i>
                 <li>
                     <h2>Virtual Reailty & Mixed Reality</h2>
-                    <p class="skill-img"><img class="lazy" data-original="img/VR_MR.png"></p>
+                    <p class="skill-img"><img class="lazy" data-original="img/projects/VR_MR.png"></p>
                 </li>
                 <i class="fa fa-plus"></i>
                 <li>
                     <h2>HCI & Data Analysis</h2>
-                    <p class="skill-img"><img class="lazy" data-original="img/HCI.png"></p>
+                    <p class="skill-img"><img class="lazy" data-original="img/projects/HCI.png"></p>
                 </li>
             </ul>            
             <!-- <div class="h-wraper"><h3>Novel Technologies Published in Top Conference and 1st Prize of Competitions</h3></div> -->
