--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Custom Fonts -->
     <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>    
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>    
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -138,7 +138,7 @@
                 </div>
                 <div class="col-md-9 about-list">
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Research Internship,</span>work with Dr. Mar Gonzalez Franco and Dr. Andy Wilson, Microsoft Research</h3></li>
+                        <li class="list-left"><h3><span class="bold">Research Internship,</span>work with Dr. Mar Gonzalez Franco and Dr. Andy Wilson, <span class="span-color">Microsoft Research</span></h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Summer 2022</h5></li>
                     </ul>
                     <ul>
@@ -146,15 +146,15 @@
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Spring 2022</h5></li>
                     </ul>
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Research Internship,</span>work with Dr. Mark Parent and Dr. Marcello Giordano, Facebook Reality Lab</h3></li>
+                        <li class="list-left"><h3><span class="bold">Research Internship,</span>work with Dr. Mark Parent and Dr. Marcello Giordano, <span class="span-color">Facebook Reality Lab</span></h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Fall 2021 & Winter 2022</h5></li>
                     </ul>
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Research Internship,</span>work with Dr. Mar Gonzalez Franco and Dr. Eyal Ofek, Microsoft Research</h3></li>
+                        <li class="list-left"><h3><span class="bold">Research Internship,</span>work with Dr. Mar Gonzalez Franco and Dr. Eyal Ofek, <span class="span-color">Microsoft Research</span></h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Summer 2021</h5></li>
                     </ul>
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Research Internship,</span>work with Dr. Fraser Anderson and Dr. Qian Zhou, Autodesk HCI&VIS group</h3></li>
+                        <li class="list-left"><h3><span class="bold">Research Internship,</span>work with Dr. Fraser Anderson and Dr. Qian Zhou, <span class="span-color">Autodesk HCI&VIS group</span></h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Winter 2021</h5></li>
                     </ul>
                     <ul>
