--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
 
     <!-- Custom Fonts -->
-    <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!--<link href="fontawesome-6.1.1/css/fontawesome.min.css" rel="stylesheet" type="text/css">-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>    
 
@@ -31,7 +31,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+    <script src="https://kit.fontawesome.com/0b7fe45437.js" crossorigin="anonymous"></script>
 </head>
 
 <body id="page-top" class="index">
@@ -67,6 +67,9 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#publication">publications</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="https://drive.google.com/file/d/1ItbDBxLlFMfe-5BqP6ZKQPTjb4R1mLFd/view?usp=sharing" target="_blank">CV</a>
                     </li>                                        
                 </ul>
             </div>
@@ -83,13 +86,13 @@
                 <div class="text-wraper">
                     <div class="intro-heading">Eric Wang<p style="font-size:0.5em;">(Cheng-Yao Wang)</p></div>
                     <div class="intro-lead-in">
-                        <p>I’m Eric Wang, a Ph.D. candidate in Information Science at Cornell University interested in <span class="about-focus">Human-Computer Interaction</span>, <span class="about-focus">Computer-Supported Cooperative Work</span> and <span class="about-focus">Virtual/Mixed Reality.</span></p>
+                        <p>I’m a Ph.D. candidate in Information Science at Cornell University interested in <span class="about-focus">Human-Computer Interaction</span>, <span class="about-focus">Computer-Supported Cooperative Work</span> and <span class="about-focus">Virtual/Mixed Reality.</span></p>
                     </div>
                     <ul class="icon-list">
                         <li><a href="mailto:ericwang0701@gmail.com"><i class="fa fa-envelope-square fa-3x"></i></a></li>
-                        <li><a href="https://www.facebook.com/profile.php?id=100000233739748" target="_blank"><i class="fa fa-facebook-square fa-3x"></i></a></li>
-                        <li><a href="https://www.youtube.com/channel/UCbBZl_n5DbM4i8xhXJrdRIg" target="_blank"><i class="fa fa-youtube-square fa-3x"></i></a></li>
+                        <li><a href="https://scholar.google.com/citations?user=_GuY94gAAAAJ&hl=en" target="_blank"><i class="fa fa-graduation-cap fa-3x" aria-hidden="true"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/ericwanghci" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a></li>
+                        <li><a href="https://drive.google.com/file/d/11OPpU_pgfPsPMcskvu0aLfT8UV5whXOB/view?usp=sharing" class="link" target="_blank"><i class="fa-solid fa-file fa-3x"></i></a></li>                    
                     </ul>
                 </div>
             </div>
@@ -107,9 +110,9 @@
                 <div class="col-md-9 about-content">
                     <h3>I’m Eric Wang, a Ph.D. candidate in Information Science at Cornell University advised by <a href="https://communication.cals.cornell.edu/people/andrea-won" target="_blank">Prof. Andrea Stevenson Won</a>. Previously, I was a research intern at <span class="bold">Autodesk</span>, <span class="bold">Microsoft Research</span>, and <span class="bold">Facebook Reality Lab</span>. I have B.S and M.S. in Computer Science from National Taiwan University advised by <a href="http://mikechen.com/" target="_blank">Prof. Mike Y. Chen</a> and <a href="http://graphics.im.ntu.edu.tw/~robin/" target="_blank">Prof. Bing-Yu Chen</a>.</h3>
 
-                    <h3>My research interests lie at the intersection of <span class="span-focus">Human-Computer Interaction (HCI)</span>, <span class="span-focus">Computer-Supported Cooperative Work (CSCW) </span>, and <span class="span-focus">Virtual/Mixed Reality (VR/MR)</span> In my Ph.D. research, I implemented and utilized the unique capabilities of 3D reconstruction techniques in different research areas such as <span class="bold">VR socially relived experiences</span>, <span class="bold">animating avatars in VR</span>, and <span class="bold"> adaptive AR/MR user interface</span>, as well as identifying its <span class="bold">privacy</span> concerns and challenges.</h3>
+                    <h3>My research interests lie at the intersection of <span class="span-focus">Human-Computer Interaction (HCI)</span>, <span class="span-focus">Computer-Supported Cooperative Work (CSCW) </span>, and <span class="span-focus">Virtual/Mixed Reality (VR/MR)</span> In my Ph.D. research, I implemented and utilized<span class="bold"> computer vision </span>and <span class="bold">machine learning</span> techniques  to recontruct our experienced and enable novel VR/MR experiences including <span class="bold">reliving experiences in VR socially</span>, <span class="bold">animating avatars in VR with online videos</span>, and <span class="bold"> personalizable AR/MR user interface</span>, as well as identifying their <span class="bold">privacy concerns</span> and challenges.</h3>
 
-                    <h3>More specifically, my PhD research focuses on (1) designing ReliveReality, a new experience-sharing method that allows people to reconstruct their experiences in 3D and share them with others in social virtual environments. (2) leveraging the ReliveReality prototype to conduct studies to understand people’s sharing preferences and privacy concerns for sharing reconstructed experiences. (3) Implementing VideoPoseVR, a system that allows users to create animated characters in VR using 3D human motions that are extracted directly from online videos. (4) Designing social-aware AR/MR interfaces through reconstructing social context cues and transforming avatar movements.</h3>
+                    <h3>More specifically, my PhD research focuses on (1) designing ReliveReality, a new experience-sharing method that allows people to reconstruct their experiences in 3D and share them with others in social virtual environments. (2) leveraging the ReliveReality prototype to conduct studies to understand people’s sharing preferences and privacy concerns for sharing reconstructed experiences. (3) implementing VideoPoseVR, a system that allows users to create animated characters in VR using 3D human motions that are extracted directly from online videos. (4) designing social-aware AR/MR interfaces through reconstructing social context cues and transforming avatar movements.</h3>
     
                 </div>                
             </div>
@@ -170,7 +173,7 @@
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Apr '15 – Sep '15</h5></li>
                     </ul>
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Chief Coordinator,</span><a href="https://drive.google.com/file/d/0B-TOzIcx7m_melhIZkRpWGtHd0NJOGNnQi15VVdod2kzbGZz/view?usp=sharing" class="link" target="_blank">2015 CHI@NTU Workshop</a></h3></li>
+                        <li class="list-left"><h3><span class="bold">Chief Coordinator,</span>2015 CHI@NTU Workshop</h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Aug '14 – Sep '14</h5></li>
                     </ul>               
                 </div>                                            
@@ -201,7 +204,7 @@
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Fall 2016</h5></li>
                     </ul>
                     <ul>
-                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span><a href="https://mobilehci.hackpad.com/2014S-Mobile-HCI-Class-Schedule-wM4Izj9r0Oa" class="link" target="_blank">Mobile HCI</a>, National Taiwan University</h3></li>
+                        <li class="list-left"><h3><span class="bold">Teaching Assistant,</span>Mobile HCI, National Taiwan University</h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Feb '14 – Jun '14</h5></li>
                     </ul> 
                 </div>
@@ -230,7 +233,7 @@
             </ul>            
             <!-- <div class="h-wraper"><h3>Novel Technologies Published in Top Conference and 1st Prize of Competitions</h3></div> -->
             <!-- Computer Science, Social Science, HCI -->
-            <div class="h-wraper"><h3>Utilizing interdisciplinary skills to tackle complex problems from both social and technical perspectives</h3></div>
+            <div class="h-wraper"><h3>Implementing novel prototypes and tackle complex problems from socio-technical and HCI perspectives</h3></div>
         </div>
     </section>
 
@@ -705,7 +708,7 @@
     <section id="publication">
         <div class="container">
             <div class="row">
-                <div class="col-lg-5 text-center col-left-style">
+                <div class="col-lg-6 text-center col-left-style">
                     <h1>publications</h1>
                     <div class="list-wrap text-left">
                         <h2>Shared Realities: Avatar Identification and Privacy Concerns in Reconstructed Experiences</h2>
@@ -778,7 +781,7 @@
                         <h4><i class="fa fa-users"></i>Chien-Pang Lin, <span class="bold">Cheng-Yao Wang,</span>Hou-Ren Chen, Wei-Chen Chu, Mike Y. Chen</h4>
                     </div>                  
                 </div>
-                <div class="col-lg-7 text-center col-right-style">
+                <div class="col-lg-6 text-center col-right-style">
                     <h1>awards</h1>
                     <div class="list-wrap text-left">
                         <h2>RelivelnVR: Capturing and Reliving VirtualReality Experiences Together</h2>
