update intro and cv

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Custom Fonts -->
     <!--<link href="fontawesome-6.1.1/css/fontawesome.min.css" rel="stylesheet" type="text/css">-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>    
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>   
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -69,7 +69,7 @@
                         <a class="page-scroll" href="#publication">publications</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="https://drive.google.com/file/d/1ItbDBxLlFMfe-5BqP6ZKQPTjb4R1mLFd/view?usp=sharing" target="_blank">CV</a>
+                        <a class="page-scroll" href="https://drive.google.com/file/d/16_P2b1KiagcJE_PY7w8yn1sP6s_vIKn5/view?usp=sharing" target="_blank">CV</a>
                     </li>                                        
                 </ul>
             </div>
@@ -92,7 +92,7 @@
                         <li><a href="mailto:ericwang0701@gmail.com"><i class="fa fa-envelope-square fa-3x"></i></a></li>
                         <li><a href="https://scholar.google.com/citations?user=_GuY94gAAAAJ&hl=en" target="_blank"><i class="fa fa-graduation-cap fa-3x" aria-hidden="true"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/ericwanghci" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a></li>
-                        <li><a href="https://drive.google.com/file/d/11OPpU_pgfPsPMcskvu0aLfT8UV5whXOB/view?usp=sharing" class="link" target="_blank"><i class="fa-solid fa-file fa-3x"></i></a></li>                    
+                        <li><a href="https://drive.google.com/file/d/16_P2b1KiagcJE_PY7w8yn1sP6s_vIKn5/view?usp=sharing" class="link" target="_blank"><i class="fa-solid fa-file fa-3x"></i></a></li>                    
                     </ul>
                 </div>
             </div>
@@ -209,7 +209,7 @@
                     </ul> 
                 </div>
             </div>
-            <p class="btn-download text-center"><a href="https://drive.google.com/file/d/11OPpU_pgfPsPMcskvu0aLfT8UV5whXOB/view?usp=sharing" class="link" target="_blank"><i class="fa fa-download"></i>download cv</a></p>
+            <p class="btn-download text-center"><a href="https://drive.google.com/file/d/16_P2b1KiagcJE_PY7w8yn1sP6s_vIKn5/view?usp=sharing" class="link" target="_blank"><i class="fa fa-download"></i>download cv</a></p>
         </div>
     </section>
 
@@ -823,9 +823,9 @@
                 <div class="col-md-4">
                     <ul class="icon-list">
                         <li><a href="mailto:ericwang0701@gmail.com"><i class="fa fa-envelope-square fa-3x"></i></a></li>
-                        <li><a href="https://www.facebook.com/profile.php?id=100000233739748" target="_blank"><i class="fa fa-facebook-square fa-3x"></i></a></li>
-                        <li><a href="https://www.youtube.com/channel/UCbBZl_n5DbM4i8xhXJrdRIg" target="_blank"><i class="fa fa-youtube-square fa-3x"></i></a></li>
+                        <li><a href="https://scholar.google.com/citations?user=_GuY94gAAAAJ&hl=en" target="_blank"><i class="fa fa-graduation-cap fa-3x" aria-hidden="true"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/ericwanghci" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a></li>
+                        <li><a href="https://drive.google.com/file/d/16_P2b1KiagcJE_PY7w8yn1sP6s_vIKn5/view?usp=sharing" class="link" target="_blank"><i class="fa-solid fa-file fa-3x"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
