--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="col-md-9 about-content">
                     <h3>I’m Eric Wang, a Ph.D. candidate in Information Science at Cornell University advised by <a href="https://communication.cals.cornell.edu/people/andrea-won" target="_blank">Prof. Andrea Stevenson Won</a>. Previously, I was a research intern at <span class="bold">Autodesk</span>, <span class="bold">Microsoft Research</span>, and <span class="bold">Facebook Reality Lab</span>. I have B.S and M.S. in Computer Science from National Taiwan University advised by <a href="http://mikechen.com/" target="_blank">Prof. Mike Y. Chen</a> and <a href="http://graphics.im.ntu.edu.tw/~robin/" target="_blank">Prof. Bing-Yu Chen</a>.</h3>
 
-                    <h3>My research interests lie at the intersection of <span class="span-focus">Human-Computer Interaction (HCI)</span>, <span class="span-focus">Computer-Supported Cooperative Work (CSCW)</span>, and <span class="span-focus">Virtual/Mixed Reality (VR/MR)</span> In my Ph.D. research, I implemented and utilized<span class="bold"> computer vision </span>and <span class="bold">machine learning</span> techniques  to reconstruct our experienced and enable novel VR/MR experiences including <span class="bold">reliving experiences in VR socially</span>, <span class="bold">animating avatars in VR with online videos</span>, and <span class="bold"> personalizable AR/MR user interface</span>, as well as identifying their <span class="bold">privacy concerns</span> and challenges.</h3>
+                    <h3>My research interests lie at the intersection of <span class="span-focus">Human-Computer Interaction (HCI)</span>, <span class="span-focus">Computer-Supported Cooperative Work (CSCW)</span>, and <span class="span-focus">Virtual/Mixed Reality (VR/MR)</span> In my Ph.D. research, I implemented and utilized<span class="bold"> computer vision </span>and <span class="bold">machine learning</span> techniques  to reconstruct our experiences and enable novel VR/MR experiences including <span class="bold">reliving experiences in VR socially</span>, <span class="bold">animating avatars in VR with online videos</span>, and <span class="bold"> personalizable AR/MR user interface</span>, as well as identifying their <span class="bold">privacy concerns</span> and challenges.</h3>
 
                     <h3>More specifically, my PhD research focuses on (1) designing ReliveReality, a new experience-sharing method that allows people to reconstruct their experiences in 3D and share them with others in social virtual environments. (2) leveraging the ReliveReality prototype to conduct studies to understand people’s sharing preferences and privacy concerns for sharing reconstructed experiences. (3) implementing VideoPoseVR, a system that allows users to create animated characters in VR using 3D human motions that are extracted directly from online videos. (4) designing social-aware AR/MR interfaces through reconstructing social context cues and transforming avatar movements.</h3>
     
@@ -696,7 +696,7 @@
                     <h2>HCI & Data Analysis</h2>
                     <ul>
                         <li>Solid experiences in human-centered design</li>
-                        <li>Tackle problems from both a social and technical perspective</li>
+                        <li>Tackle problems from socio-technical and HCI perspectives</li>
                         <li>Knowledge of quantitative, behavioral analysis and statistical concepts</li>
                     </ul>
                 </div>
@@ -711,27 +711,27 @@
                 <div class="col-lg-6 text-center col-left-style">
                     <h1>publications</h1>
                     <div class="list-wrap text-left">
-                        <h2>Shared Realities: Avatar Identification and Privacy Concerns in Reconstructed Experiences</h2>
+                        <h2><a href="https://dl.acm.org/doi/abs/10.1145/3476078" target="_blank">Shared Realities: Avatar Identification and Privacy Concerns in Reconstructed Experiences</a></h2>                   
                         <h3>CSCW 2021, Full Paper</h3>
                          <h4><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span>, Sandhya Sriram, and Andrea Stevenson Won</h4>              
                     </div>
                     <div class="list-wrap text-left">
-                        <h2>Shared Realities: Avatar Identification and Privacy Concerns in Reconstructed Experiences</h2>
-                        <h3>CSCW 2021, Full Paper</h3>
+                        <h2><a href="https://dl.acm.org/doi/abs/10.1145/3476044" target="_blank">Hide and Seek: Choices of Virtual Backgrounds in Video Chats and Their Effects on Perception</a></h2>
+                        <h3>CSCW 2021, Full Paper</h3>                    
                          <h4><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span>*, Angel Hsing-Chi Hwang*, Yao-Yuan Yang and Andrea Stevenson Won</h4>              
                     </div>
                     <div class="list-wrap text-left">
-                        <h2>Again, Together: Socially Reliving Virtual Reality Experiences When Separated</h2>
+                        <h2><a href="https://dl.acm.org/doi/abs/10.1145/3313831.3376642" target="_blank">Again, Together: Socially Reliving Virtual Reality Experiences When Separated</a></h2>
                         <h3>CHI 2020, Full Paper</h3>
                          <h4><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span>, Mose Sakashita, Jingjin Li, Upol Ehsan, and Andrea Stevenson Won</h4>              
                     </div>
                     <div class="list-wrap text-left">
-                        <h2>ReliveReality: Enabling Socially Reliving Experiences in Virtual Reality via a Single RGB camera</h2>
+                        <h2><a href="https://ieeexplore.ieee.org/document/9090534" target="_blank">ReliveReality: Enabling Socially Reliving Experiences in Virtual Reality via a Single RGB camera</a></h2>                       
                         <h3>IEEE VR 2020, Poster</h3>
                         <h4><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span>, Shengguang Bai, and Andrea Stevenson Won</h4>             
                     </div>
                     <div class="list-wrap text-left">
-                        <h2>Privacy-Preserving Relived Experiences in Virtual Reality</h2>
+                        <h2><a href=" https://ieeexplore.ieee.org/document/9090502" target="_blank">Privacy-Preserving Relived Experiences in Virtual Reality</a></h2>                
                         <h3>IEEE VR 2020, Doctoral Consortium</h3>
                          <h4><i class="fa fa-users"></i><span class="bold">Cheng-Yao Wang</span></h4>              
                     </div>
