add RemoteAR Transformer project

--- a/index.html
+++ b/index.html
@@ -241,6 +241,31 @@
     <section id="project">
         <div class="container">
             <h1>projects</h1>
+            <!-- RemoteAR Transformer project-->
+            <div class="row v-center">
+                <div class="col-md-5 text-center img-style small-padding">
+                    <div class="my-slide">
+                        <!-- Wrapper for slides -->
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/RemoteAR_Transformer1.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/RemoteAR_transformer2.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/PlanTravel_local_1.png"></div>
+                        <div><img class="img-responsive img-centered" data-lazy="img/projects/PlanTravel_remote1.png"></div>                                             
+                    </div>                    
+                </div>                            
+                <div class="col-md-7 text-left text-style">
+                    <h2>
+                        <header class="con3">In Progress</header>RemoteAR Transformer: Motion Retargeting and Personalizable Spatial Arrangements for Remote AR in Dissimilar Spaces 
+                    </h2>
+                    <h4 class="m-top"><i class="fa fa-users"></i><span class="bold">Cheng Yao Wang</span></h4>             
+                    <h3 class="record"><i class="fa fa-book"></i>In Progress</h3>
+                    <h3>In current remote AR experiences, local and remote users are lack of mutual understandings of their surrounding environments and limited to set up and interact with each other in a small mutual virtual shared space. To overcome these limitations, we implemented a novel technique, RemoteAR Transformer, that allows both local and remote users to customize the placements of partner’s avatars and shared AR content independently based on their contexts. RemoteAR Transformer utilizes motion retargeting and transforms the avatar’s motions appropriately to preserve the semantics of the movement if the local and remote users have different personalized spatial configurations.In addition, akin to hyperpersonal communication theory, RemoteAR Transformer has potential to become “hyperpersonal” and surpass face-to-face (FtF) interaction because it decouple avatar movements from user’s behavior and user  has a greater ability to strategically develop and edit self-presentation. The goals of this projects to implement and evaluate RemoteAR Transformer, as well as address the potential ethical and privacy concerns regarding transforming avatar movements. </h3>
+                    <ul class="list-btn">
+                        <li><a target="_blank" class="btn-paper"><i class="fa fa-caret-square-o-right"></i>Paper</a></li>
+                        <li><a href="https://youtu.be/JEzur6TME2I" target="_blank" class="btn-video"><i class="fa fa-caret-square-o-right"></i>Video</a></li>                          
+                    </ul>                    
+                </div>
+            </div>
+            <!-- RemoteAR Transformer project -->
             <!-- VideoPoseVR project-->
             <div class="row v-center">
                 <div class="col-md-5 text-center img-style small-padding">
